crates/alder-can/src/snapshots/alder_can__module__tests__mixed_recursive_and_non_recursive.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = 1\n\nf a = g a\n\ng a = f a\n\ny = 2\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 10,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 9,
                        column: 1,
                    },
                    end: Position {
                        line: 9,
                        column: 2,
                    },
                },
                value: "y",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 9,
                        column: 5,
                    },
                    end: Position {
                        line: 9,
                        column: 6,
                    },
                },
                value: Int(
                    2,
                ),
            },
        },
        next: Declare {
            definition: Def {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 1,
                        },
                        end: Position {
                            line: 3,
                            column: 2,
                        },
                    },
                    value: "x",
                },
                args: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            next: DeclareRec {
                definition: Def {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 7,
                                column: 1,
                            },
                            end: Position {
                                line: 7,
                                column: 2,
                            },
                        },
                        value: "g",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 7,
                                    column: 3,
                                },
                                end: Position {
                                    line: 7,
                                    column: 4,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 7,
                                column: 7,
                            },
                            end: Position {
                                line: 7,
                                column: 10,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 7,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 8,
                                    },
                                },
                                value: VarTopLevel(
                                    QualifiedName {
                                        home: ModuleName {
                                            package: None,
                                            name: "Main",
                                        },
                                        name: "f",
                                    },
                                ),
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 7,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 7,
                                            column: 10,
                                        },
                                    },
                                    value: VarLocal(
                                        "a",
                                    ),
                                },
                            ],
                        },
                    },
                },
                following: [
                    Def {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 1,
                                },
                                end: Position {
                                    line: 5,
                                    column: 2,
                                },
                            },
                            value: "f",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 3,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 4,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                        body: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 7,
                                },
                                end: Position {
                                    line: 5,
                                    column: 10,
                                },
                            },
                            value: Call {
                                function: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 8,
                                        },
                                    },
                                    value: VarTopLevel(
                                        QualifiedName {
                                            home: ModuleName {
                                                package: None,
                                                name: "Main",
                                            },
                                            name: "g",
                                        },
                                    ),
                                },
                                arguments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 10,
                                            },
                                        },
                                        value: VarLocal(
                                            "a",
                                        ),
                                    },
                                ],
                            },
                        },
                    },
                ],
                next: Empty,
            },
        },
    },
    unions: [],
    aliases: [],
    binops: [],
}
