crates/alder-can/src/snapshots/alder_can__module__tests__module_shell_header_only.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [],
    binops: [],
}
