crates/alder-can/src/snapshots/alder_can__module__tests__module_shell_reports_export_open_alias.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Pair(..))\n\ntype alias Pair a b = (a, b)\n"
---
[
    ExportOpenAlias {
        region: Region {
            start: Position {
                line: 1,
                column: 28,
            },
            end: Position {
                line: 1,
                column: 30,
            },
        },
        name: "Pair",
    },
]
