crates/alder-can/src/snapshots/alder_can__module__tests__module_shell_reports_missing_exported_operators.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((|>))\n"
---
[
    ExportNotFound {
        region: Region {
            start: Position {
                line: 1,
                column: 23,
            },
            end: Position {
                line: 1,
                column: 27,
            },
        },
        kind: BadOp,
        name: "|>",
        suggestions: [],
    },
]
